--- a/Tag2/EmotionClassifier_Loesung/index.html
+++ b/Tag2/EmotionClassifier_Loesung/index.html
@@ -18,12 +18,16 @@
 
         <button id = "Happy">Happy</button>
         <span id = "HappyImages"> 0 </span></br>
+        <button id = "removeHappyImages"> Remove Happy Images</button></br>
 
         <button id = "Surprised">Surprised</button>
         <span id = "SurprisedImages"> 0 </span></br>
+        <button id = "removeSurprisedImages"> Remove Surprised Images</button></br>
 
         <button id = "Neutral">Neutral</button>
         <span id = "NeutralImages"> 0 </span></br>
+        <button id = "removeNeutralImages"> Remove Neutral Images</button></br>
+        
 
         <button id = "Train"> Train </button> </br>
         <span id = "loss"></span>
